third_party/move/move-compiler-v2/tests/folding/constants_string_non_utf8.move
address 0x42 {
module M {
    fun u(): u64 { 0 }

    const C12: vector<u8> = b"ÿ";
}
}
